- styling and setup of routes / assets

--- a/public/system/views/index.html
+++ b/public/system/views/index.html
@@ -1,3 +1,13 @@
+<div content-for="title">
+    <span>Home</span>
+</div>
+
+<div content-for="navbarAction">
+    <div class="btn btn-navbar">
+        <i class="fa fa-plus"></i> New
+    </div>
+</div>
+
 <section data-ng-controller="IndexController">
     <h1 mean-token="'home-default'">This is the home view</h1>
 </section>
