--- a/public/system/views/header.html
+++ b/public/system/views/header.html
@@ -1,16 +1,26 @@
 
 <h1 class="app-name">Menu</h1>
 
-<div class="scrollable">
+<div class="scrollable" data-ng-controller="HeaderController">
     <div class="scrollable-content">
         <div class="list-group" toggle="off" bubble target="mainSidebar">
-            <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
+            <span>
+                <a class="list-group-item" ui-sref="home" mean-token="'site-title'">
+                    Home <i class="fa fa-chevron-right pull-right"></i>
+                </a>
+            </span>
+            <span data-ng-repeat="item in menus.main" ui-route="/{{item.link}}" >
+                <a class="list-group-item" mean-token="item.link" ui-sref='{{item.link}}'>
+                    {{item.title}} <i class="fa fa-chevron-right pull-right"></i>
+                </a>
+            </span>
+            <!--<a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
             <a class="list-group-item" href="#/scroll">Scroll <i class="fa fa-chevron-right pull-right"></i></a>
             <a class="list-group-item" href="#/toggle">Toggle <i class="fa fa-chevron-right pull-right"></i></a>
             <a class="list-group-item" href="#/tabs">Tabs <i class="fa fa-chevron-right pull-right"></i></a>
             <a class="list-group-item" href="#/accordion">Accordion <i class="fa fa-chevron-right pull-right"></i></a>
             <a class="list-group-item" href="#/overlay">Overlay <i class="fa fa-chevron-right pull-right"></i></a>
-            <a class="list-group-item" href="#/forms">Forms <i class="fa fa-chevron-right pull-right"></i></a>
+            <a class="list-group-item" href="#/forms">Forms <i class="fa fa-chevron-right pull-right"></i></a>-->
         </div>
 
     </div>
