--- a/server/views/layouts/default.html
+++ b/server/views/layouts/default.html
@@ -11,7 +11,7 @@
         <div class="navbar navbar-app navbar-absolute-top">
 
             <div class="navbar-brand navbar-brand-center" yield-to="title">
-                <span>ELO</span>
+                <span>Home</span>
             </div>
 
             <div class="btn-group pull-left">
