--- a/public/auth/views/index.html
+++ b/public/auth/views/index.html
@@ -1,6 +1,5 @@
-<div>
-
-    <div class="row">
+<div scrollable>
+    <!--<div class="row">
         <div class="col-md-offset-1 col-md-5">
             <a href="/auth/facebook">
                 <img src="/public/auth/assets/img/icons/facebook.png"/>
@@ -19,11 +18,10 @@
             <img src="/public/auth/assets/img/icons/google.png"/>
         </a>
         </div>
-    </div>
+    </div>-->
     <div class="col-md-6">
 
 
         <div ui-view></div>
     </div>
-
 </div>
